<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/conference_background"
    tools:context=".view.WordleFragment">

    <LinearLayout
        android:id="@+id/wordle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/constraint_size"
        android:layout_marginTop="@dimen/constraint_size"
        android:layout_marginEnd="@dimen/constraint_size"
        android:orientation="vertical"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="120dp"
        android:gravity="center">

        <Button
            android:id="@+id/wordle_try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
...
            app:layout_constraintHorizontal_bias="@dimen/button_weight_x"
            app:layout_constraintVertical_bias="@dimen/button_weight_y"
            android:layout_margin="16dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/wordle_quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
...
