<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/conference_background"
    tools:context=".view.EndingFragment">

    <TextView
        android:id="@+id/ending_text"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/wordle_white"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:lineHeight="20sp"/>

    <Button
        android:id="@+id/start_over_button"
        android:text="@string/start_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="160dp"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>
